--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
@@ -126,10 +126,16 @@
             @*---------------------------------------Detalles------------------------------------------------*@
 <div class="elementoEditar">
     <div class="form-horizontal">
-       <a class="btn btn-success" @*onclick="esconderEditar()"*@>Modificar</a>
-            <div class="col-lg-2 col-lg-push-6">
-                @Html.ActionLink("Eliminar", "Eliminar", null, new { confirm = true, /*Proyecto = Model.versionReq.idReqFunc*/ }, new { @class = "btn btn-danger", @*@onclick = "return CancelarE();"*@ })
+        <div class="row">
+            <div class="col-lg-2 col-lg-push-8">
+                <a class="btn btn-success" @*onclick="esconderEditar()"*@>Modificar</a>
             </div>
+            <div class="col-lg-2 col-lg-push-8">
+                @Html.ActionLink("Eliminar", "Eliminar", null, new { confirm = true, /*Proyecto = Model.versionReq.idReqFunc*/ }, 
+                                new { @class = "btn btn-danger", @*@onclick = "return CancelarE();"*@ })
+            </div>
+        </div>
+
         <dl class="dl-horizontal">
             <div class="form-group">
                 @Html.LabelFor(model => model.versionReq.nomProyecto, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -262,7 +268,7 @@
                     @Html.ValidationMessageFor(model => model.solicitud.estado, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-lg-2 col-lg-push-10">
-                    @Html.ActionLink("Volver", "Index", "GestCambiosController", new { confirm = true, /*Proyecto = Model.versionReq.idReqFunc*/ },
+                    @Html.ActionLink("Cancelar", "Index", "GestCambiosController", new { confirm = true, /*Proyecto = Model.versionReq.idReqFunc*/ },
                                         new { @class = "btn btn-danger", @*@onclick = "return CancelarE();"*@ })
                 </div>
             </fieldset>
