--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Solicitudes.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Solicitudes.cshtml
@@ -22,7 +22,7 @@
                 <input class="btn btn-success" type="submit" value="Buscar" />
             </div>
             <div class="col-lg-1 col-lg-pull-1">
-                <a class="btn btn-info" href="../Solicitudes">Mostrar Todos</a>
+                <a class="btn btn-info" href="Solicitudes">Mostrar Todos</a>
             </div>
         </div>
     </p>
