--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
@@ -14,10 +14,9 @@
     {
         @Html.AntiForgeryToken()
         <div class="form-horizontal">
-            <div class="col-lg-2 col-lg-push-6">
-                @Html.ActionLink("Eliminar", "Eliminar", null, new { confirm = true, Proyecto = Model.Requerimiento.id }, new { @class = "btn btn-danger", @onclick = "return CancelarE();" })
-            </div>
             <dl class="dl-horizontal">
+                <br>
+                <br>
                 <div class="form-group">
                     @Html.LabelFor(model => model.Requerimiento.nomProyecto, htmlAttributes: new { @class = "control-label col-md-2" })
                     @Html.EditorFor(model => model.Requerimiento.nomProyecto, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
@@ -55,9 +54,25 @@
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.Requerimiento.fuente, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @{var fuenteM = Model.UsuarioFuente != null ? Model.UsuarioFuente.nombre + " " + Model.UsuarioFuente.apellidos : " ";}
+                     @*   @{var fuenteM = Model.UsuarioFuente != null ? Model.UsuarioFuente.nombre + " " + Model.UsuarioFuente.apellidos : " ";}
                         @Html.EditorFor(model => fuenteM, new { htmlAttributes = new { @class = "form-control"} })
-                        @Html.ValidationMessageFor(model => model.Requerimiento.fuente, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.Requerimiento.fuente, "", new { @class = "text-danger" }) *@
+                        @{
+                            foreach (var userProj in Model.listaUsuario)
+                            {
+                                foreach (var user in Model.UsuariosSistema)
+                                {
+                                    if (userProj.cedula.Equals(user.cedula))
+                                    {
+                                        <option value=user.cedula>
+                                            @Html.DropDownListFor(model => model.Requerimientos.fuente, new[] { new SelectListItem() { Text = user.nombre.ToString() + " " + user.apellidos.ToString(), Value = user.cedula } }, new { @class = "form-control" })
+                                        </option>
+
+                                    }
+                                }
+
+                            }
+                        }
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.Requerimiento.responsable1, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -96,8 +111,8 @@
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.Requerimiento.estado, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.EditorFor(model => model.Requerimiento.estado, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Requerimiento.estado, "", new { @class = "text-danger" })
+                        @Html.DropDownListFor(model => model.Requerimiento.estado, new[] { new SelectListItem() { Text = "Iniciado", Value = "Iniciado" }, new SelectListItem() { Text = "Pendiente", Value = "Pendiente" }, new SelectListItem() { Text = "Terminado", Value = "Terminado" }, new SelectListItem() { Text = "Cancelado", Value = "Cancelado" } }, new { @class = "form-control" })
+                        
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.Requerimiento.sprint, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -119,11 +134,8 @@
        
 
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            @Html.ActionLink("Aceptar", "Details", null, new { confirm = true, nombreProyecto = Model.Requerimiento.nomProyecto }, new { @class = "btn btn-primary" })
-            
-            <button type="submit" onclick="esconderDetalles()" class="btn btn-primary">Aceptar</button>
-            
+        <div class="col-md-offset-2 col-md-10">            
+           <button type="submit" onclick="esconderDetalles()" class="btn btn-primary">Aceptar</button>
             <a class="btn btn-danger" onclick="cancelar()">Cancelar</a>
         </div>
 
@@ -243,11 +255,6 @@
                 </dl>
             </div>
         </div>
-
-
-
-
-
 
 
     @section Scripts {
