--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Detalles.cshtml
@@ -89,22 +89,9 @@
                 <div class="form-group">
                     <label class="control-label col-md-2">Interesado por el cambio:(Tal vez editable)</label>
                     <div class="col-md-10" style="padding-top:0.5em;">
-                       @{
-                           foreach (var userProj in Model.listaProyUsuarios)
-                           {
-                               foreach (var user in Model.listaUsuarios)
-                               {
-                                   if (userProj.cedula.Equals(user.cedula))
-                                   {
-                                    <option value=user.cedula>
-                                      @Html.DropDownListFor(model => model.Solicitud.realizadoPor, new[] { new SelectListItem() { Text = user.nombre.ToString() + " " + user.apellidos.ToString(), Value = user.cedula } }, "--Fuente no asignada--", new { @class = "form-control" })
-                                    </option>
-
-                                   }
-                                               }
-
-                                           }
-                                       }
+                       
+                        <!--Html.DropDrownListFor(model => model.Solicitud.realizadoPor, new SelectList( ViewBag.Lista, "nombre","cedula"));-->
+                        @Html.DropDownListFor(model => model.Solicitud.realizadoPor, new SelectList(ViewBag.Lista, "cedula", "names"))
                     </div>
                 </div>
                 <br /><br />
