--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Detalles.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Detalles.cshtml
@@ -91,7 +91,7 @@
                     <div class="col-md-10" style="padding-top:0.5em;">
                        
                         <!--Html.DropDrownListFor(model => model.Solicitud.realizadoPor, new SelectList( ViewBag.Lista, "nombre","cedula"));-->
-                        @Html.DropDownListFor(model => model.Solicitud.realizadoPor, new SelectList(ViewBag.Lista, "cedula", "names"))
+                        @Html.DropDownListFor(model => model.Solicitud.realizadoPor, new SelectList(ViewBag.Lista, "cedula", "names"), new { @class = "form-control" })
                     </div>
                 </div>
                 <br /><br />
