--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
@@ -128,7 +128,7 @@
             <div class="form-horizontal">
                 <a class="btn btn-success" onclick="esconderEditar()">Modificar</a>
                 <div class="col-lg-2 col-lg-push-6">
-                    @Html.ActionLink("Eliminar", "Eliminar", null, new { confirm = true, Proyecto = Model.Requerimiento.id }, new { @class = "btn btn-danger", @onclick = "return CancelarE();" })
+                    @Html.ActionLink("Eliminar", "Eliminar", null, new { confirm = true, Requerimiento = Model.Requerimiento.id, nomProy = Model.Requerimiento.nomProyecto }, new { @class = "btn btn-danger", @onclick = "return CancelarE();" })
                 </div>
                 <dl class="dl-horizontal">
                     <div class="form-group">
@@ -254,7 +254,7 @@
 
             }
             function CancelarE() {
-                if (confirm("Esta seguro que desea borrar este proyecto ?")) {
+                if (confirm("Esta seguro que desea borrar este Requerimiento Funcional ?")) {
                     return true;
                 } else {
                     return false;
