--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
@@ -132,8 +132,9 @@
                 <a class="btn btn-success" @*onclick="esconderEditar()"*@>Modificar</a>
             </div>
             <div class="col-lg-2 col-lg-push-8">
-                @Html.ActionLink("Eliminar", "Eliminar", null, new { confirm = true, /*Proyecto = Model.versionReq.idReqFunc*/ },
-                     new { @class = "btn btn-danger", @*@onclick = "return CancelarE();"*@ })
+                @Html.ActionLink("Eliminar", "Eliminar", "GestCambios", new { fecha = Model.solicitud.fecha, version = Model.solicitud.versionRF,
+               idReq = Model.solicitud.idReqFunc, nomPro = Model.solicitud.nomProyecto },
+                                                             new { @class = "btn btn-danger" })
             </div>
         </div>
 
@@ -232,63 +233,68 @@
     </div>
 </div>
 </br>
-<div class="elementoEditar">
-    <div class="form-horizontal">
-        <dl class="dl-horizontal">
-            <fieldset name="solicitudinfo">
-                <h2>Datos Solicitud</h2>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.solicitud.realizadoPor, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @{
-                        var ced = Model.solicitud.realizadoPor;
-                        var userList = ViewBag.userList as IEnumerable<ProyectoInge1.Models.Usuario>;
-                        foreach (var user in userList)
-                        {
-                            if (user.cedula.Equals(ced))
+
+@using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
+    @Html.AntiForgeryToken()
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <div class="elementoEditar">
+        <div class="form-horizontal">
+            <dl class="dl-horizontal">
+                <fieldset name="solicitudinfo">
+                    <h2>Datos Solicitud</h2>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.solicitud.realizadoPor, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @{
+                            var ced = Model.solicitud.realizadoPor;
+                            var userList = ViewBag.userList as IEnumerable<ProyectoInge1.Models.Usuario>;
+                            foreach (var user in userList)
                             {
-                                @Html.EditorFor(model => user.names, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                                if (user.cedula.Equals(ced))
+                                {
+                                    @Html.EditorFor(model => user.names, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                                }
                             }
                         }
-                    }
-                    @Html.ValidationMessageFor(model => model.solicitud.realizadoPor, "", new { @class = "text-danger" })
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.solicitud.fecha, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.EditorFor(model => model.solicitud.fecha, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
-                    @Html.ValidationMessageFor(model => model.solicitud.fecha, "", new { @class = "text-danger" })
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.solicitud.razon, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.EditorFor(model => model.solicitud.razon, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
-                    @Html.ValidationMessageFor(model => model.solicitud.razon, "", new { @class = "text-danger" })
-                </div>
-                @if ( ( Request.IsAuthenticated && User.IsInRole("Desarrollador") && Model.userInView.cedula == Model.proyecto.lider )
-                    || ( Request.IsAuthenticated && User.IsInRole("Administrador") ) )
-                {
+                        @Html.ValidationMessageFor(model => model.solicitud.realizadoPor, "", new { @class = "text-danger" })
+                    </div>
                     <div class="form-group">
-                        @Html.LabelFor(model => model.solicitud.estado, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.DropDownListFor(model => model.solicitud.estado, new[] { new SelectListItem() { Text = "Aprobada", Value = "Aprobada" },new SelectListItem() { Text = "Declinada", Value = "Declinada" },
-                                                        new SelectListItem() { Text = "Pendiente", Value = "Pendiente" }, new SelectListItem() { Text = "En Revisión", Value = "En Revisión" } }, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.solicitud.estado, "", new { @class = "text-danger" })
+                        @Html.LabelFor(model => model.solicitud.fecha, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.solicitud.fecha, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                        @Html.ValidationMessageFor(model => model.solicitud.fecha, "", new { @class = "text-danger" })
                     </div>
-                    <div class="col-lg-2 col-lg-push-5">
-                        <a class="btn btn-danger" onclick="cancelar()">Cancelar</a>
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.solicitud.razon, htmlAttributes: new { @class = "control-label col-md-2" })
+                        @Html.EditorFor(model => model.solicitud.razon, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                        @Html.ValidationMessageFor(model => model.solicitud.razon, "", new { @class = "text-danger" })
                     </div>
-                    <div class="col-lg-2 col-lg-push-8">
-                        <input type="submit" value="Aceptar" class="btn btn-primary"/>
-                    </div>
-                }
-            </fieldset>
-        </dl>
+                    @if ((Request.IsAuthenticated /*& User.IsInRole("Desarrollador") */ && Model.userInView.cedula == Model.proyecto.lider) /*|| ( Request.IsAuthenticated && User.IsInRole("Administrador") )*/ )
+                    {
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.solicitud.estado, htmlAttributes: new { @class = "control-label col-md-2" })
+                            @Html.DropDownListFor(model => model.solicitud.estado, new[] { new SelectListItem() { Text = "Aprobada", Value = "Aprobada" },new SelectListItem() { Text = "Declinada", Value = "Declinada" },
+                                                            new SelectListItem() { Text = "Pendiente", Value = "Pendiente" }, new SelectListItem() { Text = "En Revisión", Value = "En Revisión" } }, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.solicitud.estado, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="col-lg-2 col-lg-push-5">
+                            <a class="btn btn-danger" onclick="cancelar()">Cancelar</a>
+                        </div>
+                        <div class="col-lg-2 col-lg-push-8">
+                            <input type="submit" value="Aceptar" class="btn btn-primary"/>
+                        </div>
+                    }
+                </fieldset>
+            </dl>
+        </div>
     </div>
-</div>
+}
 
 
 
 
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
+                        @section Scripts {
+                            @Scripts.Render("~/bundles/jqueryval")
     <script>
         function esconderEditar() {
             $('.elementoEditar').hide();
