--- a/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/ReqFuncional/Details.cshtml
@@ -223,11 +223,15 @@
                         </div>
                     </fieldset>
                     <fieldset name="generalinfo">
-                        <legend>Criterios de aceptacion</legend>
-                        @foreach (var criterio in Model.listaCriterios)
-                        {
-                            <label class="control-label col-md-2">* Criterio:</label>
-                            @Html.EditorFor(model => criterio.criterio, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
+                        <legend >Criterios de aceptacion</legend>
+                        <legend class = "control-label col-md-2"> </legend>
+                        @{
+                            var Criterios = "";
+                            foreach (var criterio in Model.listaCriterios) {
+                                Criterios +="*" + criterio.criterio + "\n";
+                            }
+
+                            @Html.TextAreaFor(model => Criterios, new { @class = "form-control", rows = 4, @readonly = true })
                             <br /><br />
                         }
                     </fieldset>
