--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
@@ -259,25 +259,6 @@
                     }
                     @Html.ValidationMessageFor(model => model.solicitud.realizadoPor, "", new { @class = "text-danger" })
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.solicitud.fecha, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.EditorFor(model => model.solicitud.fecha, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
-                    @Html.ValidationMessageFor(model => model.solicitud.fecha, "", new { @class = "text-danger" })
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.solicitud.razon, htmlAttributes: new { @class = "control-label col-md-2" })
-                    @Html.EditorFor(model => model.solicitud.razon, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
-                    @Html.ValidationMessageFor(model => model.solicitud.razon, "", new { @class = "text-danger" })
-                </div>
-                @*@if ( ( Request.IsAuthenticated && User.IsInRole("Desarrollador") && Model.userInView.cedula == Model.Proyecto.lider )
-    || ( Request.IsAuthenticated && User.IsInRole("Administrador") ) )*@
-                {
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.solicitud.estado, htmlAttributes: new { @class = "control-label col-md-2" })
-                        @Html.DropDownListFor(model => model.solicitud.estado, new[] { new SelectListItem() { Text = "Aprobada", Value = "Aprobada" },new SelectListItem() { Text = "Declinada", Value = "Declinada" },
-                                                        new SelectListItem() { Text = "Pendiente", Value = "Pendiente" }, new SelectListItem() { Text = "En Revisión", Value = "En Revisión" } }, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.solicitud.estado, "", new { @class = "text-danger" })
-                    </div>
                     <div class="form-group">
                         @Html.LabelFor(model => model.solicitud.fecha, htmlAttributes: new { @class = "control-label col-md-2" })
                         @Html.EditorFor(model => model.solicitud.fecha, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
@@ -288,7 +269,7 @@
                         @Html.EditorFor(model => model.solicitud.razon, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
                         @Html.ValidationMessageFor(model => model.solicitud.razon, "", new { @class = "text-danger" })
                     </div>
-                    @if ((Request.IsAuthenticated /*& User.IsInRole("Desarrollador") */ && Model.userInView.cedula == Model.proyecto.lider) /*|| ( Request.IsAuthenticated && User.IsInRole("Administrador") )*/ )
+                    @if ((Request.IsAuthenticated /*& User.IsInRole("Desarrollador") */ && Model.userInView.cedula == Model.Proyecto.lider) /*|| ( Request.IsAuthenticated && User.IsInRole("Administrador") )*/ )
                     {
                         <div class="form-group">
                             @Html.LabelFor(model => model.solicitud.estado, htmlAttributes: new { @class = "control-label col-md-2" })
