--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Solicitudes.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Solicitudes.cshtml
@@ -42,7 +42,7 @@
         @foreach (var item in Model)
         {
                 var userID = User.Identity.GetUserId();
-                var fecha = @item.fecha.ToString("dd_MM_yyyy hh-mm-ss");
+                var fecha = @item.fecha.ToString("dd_MM_yyyy HH-mm-ss");
             <tr id='@(item.versionRF + "~" + item.idReqFunc + "~" + item.nomProyecto + "~" + fecha + "~" + userID)' onclick="gotoDetailsSolicitud(this)">
                 <td>
                     @Html.DisplayFor(modelItem => item.nombreRF )
