--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
@@ -194,7 +194,7 @@
                         @Html.EditorFor(model => model.solicitud.razon, new { htmlAttributes = new { @class = "form-control", @readonly = true } })
                         @Html.ValidationMessageFor(model => model.solicitud.razon, "", new { @class = "text-danger" })
                     </div>
-                    @if ((Request.IsAuthenticated /*& User.IsInRole("Desarrollador") */ && Model.userInView.cedula == Model.Proyecto.lider) /*|| ( Request.IsAuthenticated && User.IsInRole("Administrador") )*/ )
+                    @if ((Request.IsAuthenticated & User.IsInRole("Desarrollador")  && Model.userInView.cedula == Model.Proyecto.lider) || ( Request.IsAuthenticated && User.IsInRole("Administrador") ) )
                     {
                         <div class="form-group">
                             @Html.LabelFor(model => model.solicitud.estado, htmlAttributes: new { @class = "control-label col-md-2" })
