--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Details.cshtml
@@ -132,8 +132,15 @@
                 <a class="btn btn-success" onclick="esconderEditar()">Modificar</a>
             </div>
             <div class="col-lg-2 col-lg-push-8">
-                @Html.ActionLink("Eliminar", "Eliminar", null, new { confirm = true, /*Proyecto = Model.versionReq.idReqFunc*/ },
-                     new { @class = "btn btn-danger", @*@onclick = "return CancelarE();"*@ })
+                @Html.ActionLink("Eliminar", "Eliminar", "GestCambios", new
+           {
+               confirm = true,
+               fecha = Model.Solicitud.fecha,
+               version = Model.Solicitud.versionRF,
+               idReq = Model.Solicitud.idReqFunc,
+               nomPro = Model.Solicitud.nomProyecto
+           },
+                new { @class = "btn btn-danger", @onclick = "return CancelarE();" })
             </div>
         </div>
 
@@ -370,7 +377,7 @@
 
         }
         function CancelarE() {
-            if (confirm("Esta seguro que desea borrar este proyecto ?")) {
+            if (confirm("Esta seguro que desea borrar esta solicitud ?")) {
                 return true;
             } else {
                 return false;
