--- a/ProyectoInge1/ProyectoInge1/Views/GestCambios/Solicitudes.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/GestCambios/Solicitudes.cshtml
@@ -37,6 +37,7 @@
             <th> @Html.ActionLink("Requerimiento Funcional", "Solicitudes", new { sortOrder = ViewBag.ReqSortParm, currentFilter = ViewBag.CurrentFilter }) </th>
             <th> @Html.ActionLink("Proyecto", "Solicitudes", new { sortOrder = ViewBag.ProySortParm, currentFilter = ViewBag.CurrentFilter }) </th>
             <th> @Html.ActionLink("Version", "Solicitudes", new { sortOrder = ViewBag.VersSortParm, currentFilter = ViewBag.CurrentFilter }) </th>
+            <th> @Html.ActionLink("Razon", "Solicitudes", new { sortOrder = ViewBag.RazonSortParm, currentFilter = ViewBag.CurrentFilter }) </th>
             <th> @Html.ActionLink("Realizado Por", "Solicitudes", new { sortOrder = ViewBag.RealSortParm, currentFilter = ViewBag.CurrentFilter }) </th>
             <th> @Html.ActionLink("Estado", "Solicitudes", new { sortOrder = ViewBag.EstSortParm, currentFilter = ViewBag.CurrentFilter }) </th>
         </tr>
@@ -56,6 +57,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor( modelItem => item.versionRF )
+                </td>
+                <td>
+                    @Html.DisplayFor( modelItem => item.razonPreview )
                 </td>
                 <td>
                     @{
