--- a/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
+++ b/ProyectoInge1/ProyectoInge1/Views/Proyectos/Create.cshtml
@@ -116,7 +116,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">* Lider:</label>
             <div class="col-md-10" style="padding-top:0.5em;">
-                    @Html.DropDownListFor(model => model.proyecto.lider, (SelectList)ViewBag.Desarrolladores, "Seleccionar Lider", new { @class = "control-label col-md-2" } );
+                  @*@Html.DropDownListFor(model => model.proyecto.lider, (SelectList)ViewBag.Desarrolladores, "Seleccionar Lider", new { @class = "control-label col-md-2" } )*@ 
             </div>
         </div>
 
@@ -131,13 +131,20 @@
     </div>*@
         <br /><br /><br />
         <div>
-            @Html.HiddenFor(model => model.Participantes, new { @id = "output" })
-            <form name="calc">
-                <input type="text" id="output" value=" "><br />
 
-                <div class="control-label">
-                    <label class="control-label col-md-2">Desarrollador</label>
+                 @*Pureba de multi box*@
+                <div class="form-group col-md-4">
+                    <label class="control-label">Recursos asignados</label>
+                    @Html.ListBox("recAsig", (MultiSelectList)ViewBag.Asignados, new { @class = "form-control" })
                 </div>
+                <a onclick="MoverDisponibles()" href="#">&lt;&lt;</a>
+                <div class="form-group col-md-4">
+                    <label class="control-label">Recursos disponibles</label>
+                    @Html.ListBox("recDisp", (MultiSelectList)ViewBag.Disponibles, new {@class = "form-control" })               
+                </div>
+                
+                
+                @*
                 <select class="form-control col-md-2" style="width:20em" id="s" size="10"></select>
                 <div>
                     <br />
@@ -148,7 +155,7 @@
                 <div>
                     <div>
                         <select class="form-control col-md-2" style="width:20em; margin-left:2em;" id="d" size="10">
-                            @*Aqui se insertan los usuarios*@
+
                             @foreach (var item in Model.listaUsuarios)
                             {
                                 var ced = item.cedula;
@@ -160,8 +167,8 @@
                             }
                         </select>
                     </div>
-                </div>
-            </form>
+                </div>*@
+           
         </div>
         @*Fin cajas de seleccion*@
         <div class="form-group">
@@ -187,5 +194,21 @@
     $(".datepicker2").on("dp.change", function (e) {
         $('.datepicker').data("DatePicker").setMaxDate(e.date);
     });
+
+
+    function MoverAsignados() {
+        var seleccionados = $("#recAsig option:selected");
+        $("#recDisp").append($(seleccionados).clone());
+        $(seleccionados).remove();
+        e.preventDefault();
+    }
+
+    function MoverDisponibles() {
+        var seleccionados = $("#recDisp option:selected");
+        $("#recAsig").append($(seleccionados).clone());
+        $(seleccionados).remove();
+        e.preventDefault();
+    }
+
     </script>
 }
